--- a/QEMZMSEPC.ipynb
+++ b/QEMZMSEPC.ipynb
@@ -261,7 +261,7 @@
     "    \n",
     "    def __calibration_cir1(self, kraus_matrices_of_a_pauli_channel=None):\n",
     "        if kraus_matrices_of_a_pauli_channel is None:\n",
-    "            raise ValueError(\"Calibration circuit can only work when kraus_matrices_of_a_pauli_channel is not None.\")\n",
+    "            raise ValueError(\"One may not need calibration circuit if the kraus_matrices_of_a_pauli_channel is None.\")\n",
     "        qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        m = qml.PauliZ(0)\n",
@@ -274,7 +274,7 @@
     "    \n",
     "    def __calibration_cir2(self, kraus_matrices_of_a_pauli_channel=None):\n",
     "        if kraus_matrices_of_a_pauli_channel is None:\n",
-    "            raise ValueError(\"Calibration circuit can only work when kraus_matrices_of_a_pauli_channel is not None.\")\n",
+    "            raise ValueError(\"One may not need calibration circuit if the kraus_matrices_of_a_pauli_channel is None.\")\n",
     "        for i in range(self.n_qubits):\n",
     "            qml.PauliX(wires=i)\n",
     "        qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
