--- a/QEMZMSEPC.ipynb
+++ b/QEMZMSEPC.ipynb
@@ -98,6 +98,40 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "32c24fe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Next, we define a class to randomly generate Pauli channels on N qubits,\n",
+    "# which will be considered as measurement noise in the subsequent analysis.\n",
+    "import random\n",
+    "class NqubitsPauliChannel:\n",
+    "    def __init__(self, n_qubits, pauli_set_n_qubits):\n",
+    "        self.n_qubits = n_qubits\n",
+    "        self.pauli_set_n_qubits = pauli_set_n_qubits\n",
+    "    \n",
+    "    def get_kraus_matrices_of_a_random_pauli_channel(self, p_identity=0.5):\n",
+    "# In the context of a Pauli channel,\n",
+    "# the coefficient p_identity in the Kraus matrix can be interpreted as the weight assigned to the identity matrix.\n",
+    "# Typically, this coefficient is considered to be greater than 0.5,\n",
+    "# indicating that the measurement noise is not excessively large\n",
+    "# and does not result in drastic changes to the quantum state.\n",
+    "        kraus_matrices = self.pauli_set_n_qubits.copy()\n",
+    "        p_total = 1\n",
+    "        coefficient_0 = random.uniform(p_identity, p_total)\n",
+    "        kraus_matrices[0] = kraus_matrices[0] * np.sqrt(coefficient_0)\n",
+    "        p_total -= coefficient_0\n",
+    "        for i in range(1, len(kraus_matrices) - 1):\n",
+    "            coefficient_i = random.uniform(0, p_total)\n",
+    "            kraus_matrices[i] = kraus_matrices[i] * np.sqrt(coefficient_i)\n",
+    "            p_total -= coefficient_i\n",
+    "        kraus_matrices[-1] = kraus_matrices[-1] * np.sqrt(p_total)\n",
+    "        return kraus_matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "fb5291eb",
    "metadata": {},
    "outputs": [],
@@ -107,6 +141,7 @@
     "        self.n_qubits = n_qubits\n",
     "        self.nqubitspaulimatrices = NqubitsPauliMatrices\n",
     "        self.nqubitsdepolarizingchannel = NqubitsDepolarizingChannel\n",
+    "        self.nqubitspaulichannel = NqubitsPauliChannel\n",
     "        \n",
     "        \n",
     "    def circuit_output(self, operations, paras, dev, p=1,\n",
@@ -167,7 +202,10 @@
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        if need_measurement_noise:\n",
     "            if kraus_matrices_of_a_pauli_channel is None:\n",
-    "                raise ValueError(\"kraus_matrices_of_a_pauli_channel can not be None when need_measurement_noise is not False.\")\n",
+    "                nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
+    "                pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
+    "                nqubitspaulichannel = self.nqubitspaulichannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "                kraus_matrices_of_a_pauli_channel = nqubitspaulichannel.get_kraus_matrices_of_a_random_pauli_channel()\n",
     "            qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        \n",
@@ -246,7 +284,10 @@
     "        \n",
     "        if need_measurement_noise:\n",
     "            if kraus_matrices_of_a_pauli_channel is None:\n",
-    "                raise ValueError(\"kraus_matrices_of_a_pauli_channel can not be None when need_measurement_noise is not False.\")\n",
+    "                nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
+    "                pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
+    "                nqubitspaulichannel = self.nqubitspaulichannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "                kraus_matrices_of_a_pauli_channel = nqubitspaulichannel.get_kraus_matrices_of_a_random_pauli_channel()\n",
     "            qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        \n",
@@ -261,7 +302,7 @@
     "    \n",
     "    def __calibration_cir1(self, kraus_matrices_of_a_pauli_channel=None):\n",
     "        if kraus_matrices_of_a_pauli_channel is None:\n",
-    "            raise ValueError(\"One may not need calibration circuit if the kraus_matrices_of_a_pauli_channel is None.\")\n",
+    "            raise ValueError(\"One may not need calibration circuits if the kraus_matrices_of_a_pauli_channel is None.\")\n",
     "        qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        m = qml.PauliZ(0)\n",
@@ -274,7 +315,7 @@
     "    \n",
     "    def __calibration_cir2(self, kraus_matrices_of_a_pauli_channel=None):\n",
     "        if kraus_matrices_of_a_pauli_channel is None:\n",
-    "            raise ValueError(\"One may not need calibration circuit if the kraus_matrices_of_a_pauli_channel is None.\")\n",
+    "            raise ValueError(\"One may not need calibration circuits if the kraus_matrices_of_a_pauli_channel is None.\")\n",
     "        for i in range(self.n_qubits):\n",
     "            qml.PauliX(wires=i)\n",
     "        qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
@@ -284,61 +325,51 @@
     "            m = m @ qml.PauliZ(i)\n",
     "        return qml.expval(m)\n",
     "\n",
-    "    def qemzmsepc(self, operations, paras, p, dev, kraus_matrices_of_a_pauli_channel=None):\n",
+    "    def qemzmsepc(self, operations, paras, p, dev,\n",
+    "                  kraus_matrices_of_a_pauli_channel=None, need_measurement_noise=True):\n",
     "        \n",
     "# This is the output expectation value of the original noisy quantum circuit on the device dev.\n",
-    "        if kraus_matrices_of_a_pauli_channel is not None:\n",
+    "        if need_measurement_noise:\n",
+    "            if kraus_matrices_of_a_pauli_channel is None:\n",
+    "                nqubitspaulimatrices = NqubitsPauliMatrices(n_qubits)\n",
+    "                pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
+    "                nqubitspaulichannel = NqubitsPauliChannel(n_qubits, pauli_set_n_qubits)\n",
+    "                kraus_matrices_of_a_pauli_channel = nqubitspaulichannel.get_kraus_matrices_of_a_random_pauli_channel()\n",
+    "            \n",
     "            z_unmitigated = self.circuit_output(operations=operations, paras=paras, p=p, dev=dev,\n",
     "                        kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
     "                        need_gate_noise=True, need_measurement_noise=True)\n",
     "            p_u = np.sqrt(self.ufolding_output(noise_factor=3, operations=operations, paras=paras, p=p, dev=dev,\n",
     "                      kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
     "                      need_gate_noise=True, need_measurement_noise=True) / z_unmitigated)\n",
-    "            p_t = p_u * 0.5 * (np.abs(qemzmsepc.__calibration_cir1_output(dev, kraus_matrices_of_a_pauli_channel)) +\n",
-    "                           np.abs(qemzmsepc.__calibration_cir2_output(dev, kraus_matrices_of_a_pauli_channel)))\n",
+    "            if self.n_qubits % 2 == 0:\n",
+    "                p_t = p_u * 0.5 * (qemzmsepc.__calibration_cir1_output(dev, kraus_matrices_of_a_pauli_channel) +\n",
+    "                           qemzmsepc.__calibration_cir2_output(dev, kraus_matrices_of_a_pauli_channel))\n",
+    "            else:\n",
+    "                p_t = p_u * 0.5 * (qemzmsepc.__calibration_cir1_output(dev, kraus_matrices_of_a_pauli_channel) -\n",
+    "                           qemzmsepc.__calibration_cir2_output(dev, kraus_matrices_of_a_pauli_channel))\n",
     "            z_mitigated = z_unmitigated / p_t\n",
     "        else:\n",
     "            z_unmitigated = self.circuit_output(operations=operations, paras=paras, p=p, dev=dev,\n",
-    "                        kraus_matrices_of_a_pauli_channel=None,\n",
+    "                        kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
     "                        need_gate_noise=True, need_measurement_noise=False)\n",
     "            p_u = np.sqrt(self.ufolding_output(noise_factor=3, operations=operations, paras=paras, p=p, dev=dev,\n",
-    "                      kraus_matrices_of_a_pauli_channel=None,\n",
+    "                      kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
     "                      need_gate_noise=True, need_measurement_noise=False) / z_unmitigated)\n",
     "            p_t = p_u\n",
     "            z_mitigated = z_unmitigated / p_t\n",
-    "            \n",
     "        return z_mitigated"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d3e08483",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_qubits = 4\n",
     "dev = qml.device('default.mixed', wires=n_qubits)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "7d81724c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nqubitspaulimatrices = NqubitsPauliMatrices(n_qubits)\n",
-    "pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "# The following is a Pauli channel defined on N quantum bits that I randomly set up,\n",
-    "# representing measurement noise.\n",
-    "# Readers can adjust the parameters within this channel for additional simulation experiments.\n",
-    "kraus_matrices_of_a_pauli_channel = [np.sqrt(0.9)*pauli_set_n_qubits[0],\n",
-    "                      np.sqrt(0.03)*pauli_set_n_qubits[31],\n",
-    "                      np.sqrt(0.01)*pauli_set_n_qubits[150],\n",
-    "                      np.sqrt(0.03)*pauli_set_n_qubits[159],\n",
-    "                      np.sqrt(0.01)*pauli_set_n_qubits[160],\n",
-    "                      np.sqrt(0.02)*pauli_set_n_qubits[251]]"
    ]
   },
   {
@@ -352,32 +383,32 @@
      "output_type": "stream",
      "text": [
       "z_ideal is 1.0\n",
-      "z_unmitigated is 0.8367529411764699\n",
-      "z_mitigated is 1.0000000000000042\n",
+      "z_unmitigated is 0.511362786062511\n",
+      "z_mitigated is 1.0000000000000067\n",
       "------------------\n",
       "z_ideal is 0.5931327983656769\n",
-      "z_unmitigated is 0.49630561354071495\n",
-      "z_mitigated is 0.5931327983656868\n",
+      "z_unmitigated is 0.2763832957464949\n",
+      "z_mitigated is 0.5931327983656781\n",
       "------------------\n",
       "z_ideal is 0.1493041506116879\n",
-      "z_unmitigated is 0.12493068715418676\n",
-      "z_mitigated is 0.14930415061169372\n",
+      "z_unmitigated is 0.0665895824972073\n",
+      "z_mitigated is 0.14930415061169325\n",
       "------------------\n",
       "z_ideal is 0.0051202072280735166\n",
-      "z_unmitigated is 0.004284348457524442\n",
-      "z_mitigated is 0.005120207228072195\n",
+      "z_unmitigated is 0.0032891541761018543\n",
+      "z_mitigated is 0.0051202072280764855\n",
       "------------------\n",
       "z_ideal is 0.0002755900039979539\n",
-      "z_unmitigated is 0.00023060074640146588\n",
-      "z_mitigated is 0.0002755900039955519\n",
+      "z_unmitigated is 6.351404273046563e-05\n",
+      "z_mitigated is 0.0002755900039985035\n",
       "------------------\n",
       "z_ideal is 0.06495850756506487\n",
-      "z_unmitigated is 0.054354222259503544\n",
-      "z_mitigated is 0.06495850756506802\n",
+      "z_unmitigated is 0.037568741298539834\n",
+      "z_mitigated is 0.06495850756505664\n",
       "------------------\n",
       "z_ideal is 0.4119471515970569\n",
-      "z_unmitigated is 0.34469799070809914\n",
-      "z_mitigated is 0.41194715159704925\n",
+      "z_unmitigated is 0.10488598318509065\n",
+      "z_mitigated is 0.4119471515970655\n",
       "------------------\n"
      ]
     }
@@ -388,8 +419,12 @@
     "# the values after error mitigation through the QEM-ZMSEPC method should be the same as the ideal values.\n",
     "\n",
     "rotation_angle = [0, 0.5, 0.9, 1.3, 1.7, 2.1, 2.5]\n",
-    "p=0.93 # p: Depolarization rate.\n",
+    "p = 0.8 # p: Depolarization rate.\n",
     "for rotation_angle_of_rx in rotation_angle:\n",
+    "    nqubitspaulimatrices = NqubitsPauliMatrices(n_qubits)\n",
+    "    pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
+    "    nqubitspaulichannel = NqubitsPauliChannel(n_qubits, pauli_set_n_qubits)\n",
+    "    kraus_matrices_of_a_pauli_channel = nqubitspaulichannel.get_kraus_matrices_of_a_random_pauli_channel()\n",
     "    # The operations and paras required to simulate a Trotter step quantum circuit are as follows.\n",
     "    operations = ['RX', 'RX', 'RX', 'RX', 'CNOT', 'CNOT', 'RZ', 'RZ', 'CNOT', 'CNOT', 'CNOT', 'RZ', 'CNOT']\n",
     "    rotation_angle_of_rz = -0.2\n",
@@ -422,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95bd9fae",
+   "id": "0803eecb",
    "metadata": {},
    "outputs": [],
    "source": []
