--- a/QEMZMSEPC.ipynb
+++ b/QEMZMSEPC.ipynb
@@ -325,39 +325,23 @@
     "            m = m @ qml.PauliZ(i)\n",
     "        return qml.expval(m)\n",
     "\n",
-    "    def qemzmsepc(self, operations, paras, p, dev,\n",
-    "                  kraus_matrices_of_a_pauli_channel=None, need_measurement_noise=True):\n",
+    "    def qemzmsepc(self, operations, paras, p, dev, kraus_matrices_of_a_pauli_channel):\n",
     "        \n",
     "# This is the output expectation value of the original noisy quantum circuit on the device dev.\n",
-    "        if need_measurement_noise:\n",
-    "            if kraus_matrices_of_a_pauli_channel is None:\n",
-    "                nqubitspaulimatrices = NqubitsPauliMatrices(n_qubits)\n",
-    "                pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "                nqubitspaulichannel = NqubitsPauliChannel(n_qubits, pauli_set_n_qubits)\n",
-    "                kraus_matrices_of_a_pauli_channel = nqubitspaulichannel.get_kraus_matrices_of_a_random_pauli_channel()\n",
-    "            \n",
-    "            z_unmitigated = self.circuit_output(operations=operations, paras=paras, p=p, dev=dev,\n",
-    "                        kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
-    "                        need_gate_noise=True, need_measurement_noise=True)\n",
-    "            p_u = np.sqrt(self.ufolding_output(noise_factor=3, operations=operations, paras=paras, p=p, dev=dev,\n",
-    "                      kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
-    "                      need_gate_noise=True, need_measurement_noise=True) / z_unmitigated)\n",
-    "            if self.n_qubits % 2 == 0:\n",
-    "                p_t = p_u * 0.5 * (qemzmsepc.__calibration_cir1_output(dev, kraus_matrices_of_a_pauli_channel) +\n",
-    "                           qemzmsepc.__calibration_cir2_output(dev, kraus_matrices_of_a_pauli_channel))\n",
-    "            else:\n",
-    "                p_t = p_u * 0.5 * (qemzmsepc.__calibration_cir1_output(dev, kraus_matrices_of_a_pauli_channel) -\n",
-    "                           qemzmsepc.__calibration_cir2_output(dev, kraus_matrices_of_a_pauli_channel))\n",
-    "            z_mitigated = z_unmitigated / p_t\n",
+    "\n",
+    "        z_unmitigated = self.circuit_output(operations=operations, paras=paras, p=p, dev=dev,\n",
+    "                    kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
+    "                    need_gate_noise=True, need_measurement_noise=True)\n",
+    "        p_u = np.sqrt(self.ufolding_output(noise_factor=3, operations=operations, paras=paras, p=p, dev=dev,\n",
+    "                  kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
+    "                  need_gate_noise=True, need_measurement_noise=True) / z_unmitigated)\n",
+    "        if self.n_qubits % 2 == 0:\n",
+    "            p_t = p_u * 0.5 * (qemzmsepc.__calibration_cir1_output(dev, kraus_matrices_of_a_pauli_channel) +\n",
+    "                       qemzmsepc.__calibration_cir2_output(dev, kraus_matrices_of_a_pauli_channel))\n",
     "        else:\n",
-    "            z_unmitigated = self.circuit_output(operations=operations, paras=paras, p=p, dev=dev,\n",
-    "                        kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
-    "                        need_gate_noise=True, need_measurement_noise=False)\n",
-    "            p_u = np.sqrt(self.ufolding_output(noise_factor=3, operations=operations, paras=paras, p=p, dev=dev,\n",
-    "                      kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
-    "                      need_gate_noise=True, need_measurement_noise=False) / z_unmitigated)\n",
-    "            p_t = p_u\n",
-    "            z_mitigated = z_unmitigated / p_t\n",
+    "            p_t = p_u * 0.5 * (qemzmsepc.__calibration_cir1_output(dev, kraus_matrices_of_a_pauli_channel) -\n",
+    "                       qemzmsepc.__calibration_cir2_output(dev, kraus_matrices_of_a_pauli_channel))\n",
+    "        z_mitigated = z_unmitigated / p_t\n",
     "        return z_mitigated"
    ]
   },
@@ -383,32 +367,32 @@
      "output_type": "stream",
      "text": [
       "z_ideal is 1.0\n",
-      "z_unmitigated is 0.511362786062511\n",
-      "z_mitigated is 1.0000000000000067\n",
+      "z_unmitigated is 0.09512032172854049\n",
+      "z_mitigated is 1.0000000000000062\n",
       "------------------\n",
       "z_ideal is 0.5931327983656769\n",
-      "z_unmitigated is 0.2763832957464949\n",
-      "z_mitigated is 0.5931327983656781\n",
+      "z_unmitigated is 0.1571014607763936\n",
+      "z_mitigated is 0.59313279836568\n",
       "------------------\n",
       "z_ideal is 0.1493041506116879\n",
-      "z_unmitigated is 0.0665895824972073\n",
-      "z_mitigated is 0.14930415061169325\n",
+      "z_unmitigated is 0.0596779525899744\n",
+      "z_mitigated is 0.1493041506116928\n",
       "------------------\n",
       "z_ideal is 0.0051202072280735166\n",
-      "z_unmitigated is 0.0032891541761018543\n",
-      "z_mitigated is 0.0051202072280764855\n",
+      "z_unmitigated is 0.0034876570531620216\n",
+      "z_mitigated is 0.005120207228076036\n",
       "------------------\n",
       "z_ideal is 0.0002755900039979539\n",
-      "z_unmitigated is 6.351404273046563e-05\n",
-      "z_mitigated is 0.0002755900039985035\n",
+      "z_unmitigated is 0.00019527883510279953\n",
+      "z_mitigated is 0.00027559000399675414\n",
       "------------------\n",
       "z_ideal is 0.06495850756506487\n",
-      "z_unmitigated is 0.037568741298539834\n",
-      "z_mitigated is 0.06495850756505664\n",
+      "z_unmitigated is 0.029780581075074385\n",
+      "z_mitigated is 0.06495850756505613\n",
       "------------------\n",
       "z_ideal is 0.4119471515970569\n",
-      "z_unmitigated is 0.10488598318509065\n",
-      "z_mitigated is 0.4119471515970655\n",
+      "z_unmitigated is 0.26456369429603127\n",
+      "z_mitigated is 0.41194715159706435\n",
       "------------------\n"
      ]
     }
@@ -457,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0803eecb",
+   "id": "2bcdb5fb",
    "metadata": {},
    "outputs": [],
    "source": []
