--- a/QEMZMSEPC.ipynb
+++ b/QEMZMSEPC.ipynb
@@ -132,6 +132,25 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "69dd5791",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NqubitsIdentityChannel:\n",
+    "    def __init__(self, n_qubits, pauli_set_n_qubits):\n",
+    "        self.n_qubits = n_qubits\n",
+    "        self.pauli_set_n_qubits = pauli_set_n_qubits\n",
+    "        \n",
+    "    def get_kraus_matrices_of_a_identity_channel(self):\n",
+    "        kraus_matrices = self.pauli_set_n_qubits.copy()\n",
+    "        for i in range(1, len(kraus_matrices)):\n",
+    "            kraus_matrices[i] = kraus_matrices[i] * 0\n",
+    "        return kraus_matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "fb5291eb",
    "metadata": {},
    "outputs": [],
@@ -141,7 +160,7 @@
     "        self.n_qubits = n_qubits\n",
     "        self.nqubitspaulimatrices = NqubitsPauliMatrices\n",
     "        self.nqubitsdepolarizingchannel = NqubitsDepolarizingChannel\n",
-    "        self.nqubitspaulichannel = NqubitsPauliChannel\n",
+    "        self.nqubitsidentitychannel = NqubitsIdentityChannel\n",
     "        \n",
     "        \n",
     "    def circuit_output(self, operations, paras, dev, p=1,\n",
@@ -204,8 +223,8 @@
     "            if kraus_matrices_of_a_pauli_channel is None:\n",
     "                nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
     "                pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "                nqubitspaulichannel = self.nqubitspaulichannel(self.n_qubits, pauli_set_n_qubits)\n",
-    "                kraus_matrices_of_a_pauli_channel = nqubitspaulichannel.get_kraus_matrices_of_a_random_pauli_channel()\n",
+    "                nqubitsidentitychannel = self.nqubitsidentitychannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "                kraus_matrices_of_a_pauli_channel = nqubitsidentitychannel.get_kraus_matrices_of_a_identity_channel()\n",
     "            qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        \n",
@@ -286,8 +305,8 @@
     "            if kraus_matrices_of_a_pauli_channel is None:\n",
     "                nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
     "                pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
-    "                nqubitspaulichannel = self.nqubitspaulichannel(self.n_qubits, pauli_set_n_qubits)\n",
-    "                kraus_matrices_of_a_pauli_channel = nqubitspaulichannel.get_kraus_matrices_of_a_random_pauli_channel()\n",
+    "                nqubitsidentitychannel = self.nqubitsidentitychannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "                kraus_matrices_of_a_pauli_channel = nqubitsidentitychannel.get_kraus_matrices_of_a_identity_channel()\n",
     "            qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        \n",
@@ -302,7 +321,10 @@
     "    \n",
     "    def __calibration_cir1(self, kraus_matrices_of_a_pauli_channel=None):\n",
     "        if kraus_matrices_of_a_pauli_channel is None:\n",
-    "            raise ValueError(\"One may not need calibration circuits if the kraus_matrices_of_a_pauli_channel is None.\")\n",
+    "            nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
+    "            pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
+    "            nqubitsidentitychannel = self.nqubitsidentitychannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "            kraus_matrices_of_a_pauli_channel = nqubitsidentitychannel.get_kraus_matrices_of_a_identity_channel()\n",
     "        qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
     "                         wires=[i for i in range(self.n_qubits)])\n",
     "        m = qml.PauliZ(0)\n",
@@ -315,7 +337,10 @@
     "    \n",
     "    def __calibration_cir2(self, kraus_matrices_of_a_pauli_channel=None):\n",
     "        if kraus_matrices_of_a_pauli_channel is None:\n",
-    "            raise ValueError(\"One may not need calibration circuits if the kraus_matrices_of_a_pauli_channel is None.\")\n",
+    "            nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
+    "            pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
+    "            nqubitsidentitychannel = self.nqubitsidentitychannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "            kraus_matrices_of_a_pauli_channel = nqubitsidentitychannel.get_kraus_matrices_of_a_identity_channel()\n",
     "        for i in range(self.n_qubits):\n",
     "            qml.PauliX(wires=i)\n",
     "        qml.QubitChannel(kraus_matrices_of_a_pauli_channel,\n",
@@ -325,10 +350,15 @@
     "            m = m @ qml.PauliZ(i)\n",
     "        return qml.expval(m)\n",
     "\n",
-    "    def qemzmsepc(self, operations, paras, p, dev, kraus_matrices_of_a_pauli_channel):\n",
+    "    def qemzmsepc(self, operations, paras, p, dev, kraus_matrices_of_a_pauli_channel=None):\n",
     "        \n",
     "# This is the output expectation value of the original noisy quantum circuit on the device dev.\n",
-    "\n",
+    "        if kraus_matrices_of_a_pauli_channel is None:\n",
+    "            nqubitspaulimatrices = self.nqubitspaulimatrices(self.n_qubits)\n",
+    "            pauli_set_n_qubits = nqubitspaulimatrices.get_pauli_matrices_of_n_qubits()\n",
+    "            nqubitsidentitychannel = self.nqubitsidentitychannel(self.n_qubits, pauli_set_n_qubits)\n",
+    "            kraus_matrices_of_a_pauli_channel = nqubitsidentitychannel.get_kraus_matrices_of_a_identity_channel()\n",
+    "            \n",
     "        z_unmitigated = self.circuit_output(operations=operations, paras=paras, p=p, dev=dev,\n",
     "                    kraus_matrices_of_a_pauli_channel=kraus_matrices_of_a_pauli_channel,\n",
     "                    need_gate_noise=True, need_measurement_noise=True)\n",
@@ -347,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d3e08483",
    "metadata": {},
    "outputs": [],
@@ -358,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "50b8e495",
    "metadata": {},
    "outputs": [
@@ -367,32 +397,32 @@
      "output_type": "stream",
      "text": [
       "z_ideal is 1.0\n",
-      "z_unmitigated is 0.09512032172854049\n",
-      "z_mitigated is 1.0000000000000062\n",
+      "z_unmitigated is 0.2701013991411113\n",
+      "z_mitigated is 1.000000000000003\n",
       "------------------\n",
       "z_ideal is 0.5931327983656769\n",
-      "z_unmitigated is 0.1571014607763936\n",
-      "z_mitigated is 0.59313279836568\n",
+      "z_unmitigated is 0.4630742455670899\n",
+      "z_mitigated is 0.5931327983656794\n",
       "------------------\n",
       "z_ideal is 0.1493041506116879\n",
-      "z_unmitigated is 0.0596779525899744\n",
-      "z_mitigated is 0.1493041506116928\n",
+      "z_unmitigated is 0.018448027085058064\n",
+      "z_mitigated is 0.14930415061169358\n",
       "------------------\n",
       "z_ideal is 0.0051202072280735166\n",
-      "z_unmitigated is 0.0034876570531620216\n",
-      "z_mitigated is 0.005120207228076036\n",
+      "z_unmitigated is 0.003837761913675998\n",
+      "z_mitigated is 0.00512020722807638\n",
       "------------------\n",
       "z_ideal is 0.0002755900039979539\n",
-      "z_unmitigated is 0.00019527883510279953\n",
-      "z_mitigated is 0.00027559000399675414\n",
+      "z_unmitigated is 0.00019269513970334579\n",
+      "z_mitigated is 0.00027559000399633054\n",
       "------------------\n",
       "z_ideal is 0.06495850756506487\n",
-      "z_unmitigated is 0.029780581075074385\n",
-      "z_mitigated is 0.06495850756505613\n",
+      "z_unmitigated is 0.02845700072310266\n",
+      "z_mitigated is 0.06495850756505615\n",
       "------------------\n",
       "z_ideal is 0.4119471515970569\n",
-      "z_unmitigated is 0.26456369429603127\n",
-      "z_mitigated is 0.41194715159706435\n",
+      "z_unmitigated is 0.27186873914320075\n",
+      "z_mitigated is 0.4119471515970641\n",
       "------------------\n"
      ]
     }
@@ -429,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ea55f1ca",
    "metadata": {},
    "outputs": [],
@@ -441,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bcdb5fb",
+   "id": "153995d3",
    "metadata": {},
    "outputs": [],
    "source": []
